--- a/index.html
+++ b/index.html
@@ -5,27 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TWICE Performance Mashup</title>
-    <style>
-        video {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 50%;
-            opacity: 0;
-        }
-
-        #start {
-            position: absolute;
-            top: 50vh;
-            right: 0;
-        }
-
-        #change {
-            position: absolute;
-            top: 60vh;
-            right: 0;      
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
     <video id = "video1" src= "./Dance the Night Away 2.mp4" preload="auto" muted paused></video>
@@ -33,31 +14,5 @@
     <button id= "start">Start</button>
     <button id= "change">Change</button> 
 
-    <script>
-        const video1 = document.querySelector('#video1')
-        const video2 = document.querySelector('#video2')
-        const start = document.querySelector('#start')
-        const change = document.querySelector('#change')
-
-        video1.addEventListener('canplaythrough', () => {
-            video1.style.opacity = 1
-        })
-
-        start.addEventListener('click', () => {
-            video1.muted = false
-            video1.volume = 0.1
-            video1.currentTime = 10.366666
-            video1.style.opacity = 1
-            video1.play()
-            video2.currentTime = 1.166666
-            video2.play()
-        })
-
-        change.addEventListener('click', () => {
-            video2.style.opacity = parseInt(video2.style.opacity) ? 0 : 1      
-        })
-    
-
-    </script>
 </body>
 </html>
