--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <video id="video1" src="./Dance the Night Away 1.mp4" preload="auto" muted paused></video>
-    <video id="video2" src="./Dance the Night Away 2.mp4" preload="auto" muted paused></video>
-    <video id="video3" src="./Dance the Night Away 3.mp4" preload="auto" muted paused></video>
-    <video id="video4" src="./Dance the Night Away 4.mp4" preload="auto" muted paused></video>
+    <video id="video1" src="./Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
+    <video id="video2" src="./Dance the Night Away 2.mp4" data-starttime=10.366666 preload="auto" muted paused></video>
+    <video id="video3" src="./Dance the Night Away 3.mp4" data-starttime=1.144444 preload="auto" muted paused></video>
+    <video id="video4" src="./Dance the Night Away 4.mp4" data-starttime=0.266666 preload="auto" muted paused></video>
     <button id="start">Start</button>
     <button id="change">Change</button> 
 
