made all four videos show up at one place

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    <video id="video1" src="./Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
-    <video id="video2" src="./Dance the Night Away 2.mp4" data-starttime=10.366666 preload="auto" muted paused></video>
-    <video id="video3" src="./Dance the Night Away 3.mp4" data-starttime=1.144444 preload="auto" muted paused></video>
-    <video id="video4" src="./Dance the Night Away 4.mp4" data-starttime=0.266666 preload="auto" muted paused></video>
+    <div class="video-container">
+        <video id="video1" class = "selected" src="./Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
+        <video id="video2" src="./Dance the Night Away 2.mp4" data-starttime=10.366666 preload="auto" muted paused></video>
+        <video id="video3" src="./Dance the Night Away 3.mp4" data-starttime=1.144444 preload="auto" muted paused></video>
+        <video id="video4" src="./Dance the Night Away 4.mp4" data-starttime=0.266666 preload="auto" muted paused></video>
+    </div>
     <button id="start">Start</button>
     <button id="change">Change</button> 
-
 </body>
 </html>
