fix: weird scroll position

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TWICE Performance Mashup</title>
+    <link href="https://unpkg.com/sanitize.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" defer></script>
 </head>
 <body>
     <div class="video-container">
-        <video id="video1" class = "selected" src="./Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
+        <video id="video1" class="selected" src="./Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
         <video id="video2" src="./Dance the Night Away 2.mp4" data-starttime=10.366666 preload="auto" muted paused></video>
         <video id="video3" src="./Dance the Night Away 3.mp4" data-starttime=1.144444 preload="auto" muted paused></video>
         <video id="video4" src="./Dance the Night Away 4.mp4" data-starttime=0.266666 preload="auto" muted paused></video>
