--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="video-container">
-        <video id="video1" class="selected" src="./vid/Dance the Night Away 1.mp4" data-starttime=10.8 preload="auto" muted paused></video>
-        <video id="video2" src="./vid/Dance the Night Away 2.mp4" data-starttime=10.366666 preload="auto" muted paused></video>
-        <video id="video3" src="./vid/Dance the Night Away 3.mp4" data-starttime=1.144444 preload="auto" muted paused></video>
-        <video id="video4" src="./vid/Dance the Night Away 4.mp4" data-starttime=0.266666 preload="auto" muted paused></video>
+        <video id="video1" class="selected" src="./vid/Dance the Night Away 1.mp4" data-starttime=10.8 data-title="TWICE - Dance the Night Away (Music Bank)" preload="auto" muted paused></video>
+        <video id="video2" src="./vid/Dance the Night Away 2.mp4" data-starttime=10.366666 data-title="TWICE - Dance The Night Away (M COUNTDOWN)" preload="auto" muted paused></video>
+        <video id="video3" src="./vid/Dance the Night Away 3.mp4" data-starttime=1.144444 data-title="TWICE - Dance The Night Away (VLIVE)" preload="auto" muted paused></video>
+        <video id="video4" src="./vid/Dance the Night Away 4.mp4" data-starttime=0.266666 data-title="TWICE - Dance the Night Away (Show! Music Core)" preload="auto" muted paused></video>
     </div>
      
     <div id="player-container">
@@ -25,7 +25,7 @@
             <path id="spiral" d="M44.8858 22.1757C39.2362 16.684 30.0769 16.684 24.4295 22.1758C19.7604 26.7122 19.7604 34.0714 24.4302 38.6084C28.3145 42.3841 34.6123 42.3841 38.4951 38.6077C41.7515 35.4423 41.7515 30.3088 38.4946 27.1431C35.7414 24.4668 31.2742 24.4668 28.5188 27.1425C27.771 27.8687 27.7704 29.0468 28.5176 29.7737C29.2647 30.5006 30.4766 30.5012 31.2245 29.7749C32.4848 28.5509 34.5292 28.5509 35.7877 29.7743C37.5496 31.4869 37.5496 34.2643 35.7877 35.9769C33.3996 38.2996 29.5262 38.2996 27.1367 35.9769C23.9624 32.8929 23.9624 27.8908 27.1363 24.8071C31.2894 20.7685 38.0244 20.7685 42.1787 24.8067C47.5562 30.0355 47.5562 38.5121 42.1785 43.7411C35.2682 50.4582 24.0637 50.4582 17.1531 43.7409C8.32845 35.163 8.32845 21.254 17.1531 12.6761C17.9006 11.9495 17.9006 10.7715 17.1531 10.0449C16.4056 9.31836 15.1937 9.31836 14.4462 10.0449C4.12665 20.076 4.12665 36.341 14.4462 46.3721C22.8518 54.5426 36.4801 54.5426 44.8856 46.3721C51.7579 39.6897 51.7579 28.8578 44.8858 22.1757Z" fill="#EBDFD3"/>
             <path id="pink-band" d="M61.4047 32.5C61.4047 48.5178 48.4621 61.5 32.5 61.5C16.5378 61.5 3.59521 48.5178 3.59521 32.5C3.59521 16.4822 16.5378 3.5 32.5 3.5C48.4621 3.5 61.4047 16.4822 61.4047 32.5Z" stroke="#E30D89"/>
         </svg>
-        <div id="text-container"><div id="text">TWICE (트와이스) Dance The Night Away M COUNTDOWN 180719</div></div>
+        <div id="text-container"><div id="text">TWICE - Dance the Night Away (Music Bank)</div></div>
         <svg id="maximize" width="46" height="46" viewBox="0 0 46 46" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2 14V6C2 3.79086 3.79086 2 6 2H14" stroke="#F5259E" stroke-width="4" stroke-linecap="round"/>
             <path d="M44 14V6C44 3.79086 42.2091 2 40 2H32" stroke="#F5259E" stroke-width="4" stroke-linecap="round"/>
