--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <video id="video2" src="./vid/Dance the Night Away 2.mp4" poster="img/dancethenightawaylogo.jpg" data-starttime=10.2 data-title="TWICE - Dance The Night Away (M COUNTDOWN)" preload="auto" muted paused></video>
         <video id="video3" src="./vid/Dance the Night Away 3.mp4" poster="img/dancethenightawaylogo.jpg" data-starttime=1.0 data-title="TWICE - Dance The Night Away (VLIVE)" preload="auto" muted paused></video>
         <video id="video4" src="./vid/Dance the Night Away 4.mp4" poster="img/dancethenightawaylogo.jpg" data-starttime=0.2 data-title="TWICE - Dance the Night Away (Show! Music Core)" preload="auto" muted paused></video>
+        <video id="video5" src="./vid/Dance the Night Away 5.mp4" poster="img/dancethenightawaylogo.jpg" data-starttime=14.8 data-title="TWICE - Dance the Night Away (Show! Music Core)" preload="auto" muted paused></video>
     </div>
      
     <div id="player-container">
